--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "require": {
     "php": "^8.0.2",
+    "ext-json": "*",
     "barryvdh/laravel-dompdf": "^2.0",
     "doctrine/dbal": "^3.6",
     "fruitcake/laravel-cors": "^3.0",
@@ -22,8 +23,7 @@
     "rmunate/spell-number": "^3.3",
     "spatie/laravel-activitylog": "^4.7",
     "spatie/laravel-permission": "^5.10",
-    "yajra/laravel-datatables": "9.0",
-    "ext-json": "*"
+    "yajra/laravel-datatables": "^9.0"
   },
   "require-dev": {
     "barryvdh/laravel-debugbar": "^3.9",
