registered compony -parth

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1412,6 +1412,8 @@
     "/images/profile/user-uploads/user-11.jpg": "/images/profile/user-uploads/user-11.jpg",
     "/images/profile/user-uploads/user-12.jpg": "/images/profile/user-uploads/user-12.jpg",
     "/images/profile/user-uploads/user-13.jpg": "/images/profile/user-uploads/user-13.jpg",
+    "/images/profilephoto/1732878699.png": "/images/profilephoto/1732878699.png",
+    "/images/profilephoto/1732883174.png": "/images/profilephoto/1732883174.png",
     "/images/raty/star-half-2.png": "/images/raty/star-half-2.png",
     "/images/raty/star-on-2.png": "/images/raty/star-on-2.png",
     "/images/slider/01.jpg": "/images/slider/01.jpg",
@@ -1437,6 +1439,7 @@
     "/data/menu-data/horizontalMenu.json": "/data/menu-data/horizontalMenu.json",
     "/data/menu-data/horizontalMenu_old.json": "/data/menu-data/horizontalMenu_old.json",
     "/data/menu-data/verticalMenu.json": "/data/menu-data/verticalMenu.json",
+    "/data/menu-data/verticalMenu_bkp.json": "/data/menu-data/verticalMenu_bkp.json",
     "/data/permissions-list.json": "/data/permissions-list.json",
     "/data/projects-list.json": "/data/projects-list.json",
     "/data/search.json": "/data/search.json",
