--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "maatwebsite/excel": "^3.1",
     "phpoffice/phpspreadsheet": "^1.29",
     "rmunate/spell-number": "^3.3",
+    "simplesoftwareio/simple-qrcode": "^4.2",
     "spatie/laravel-activitylog": "^4.7",
     "spatie/laravel-permission": "^5.10",
     "yajra/laravel-datatables": "^9.0"
