create messages modules

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1412,8 +1412,12 @@
     "/images/profile/user-uploads/user-11.jpg": "/images/profile/user-uploads/user-11.jpg",
     "/images/profile/user-uploads/user-12.jpg": "/images/profile/user-uploads/user-12.jpg",
     "/images/profile/user-uploads/user-13.jpg": "/images/profile/user-uploads/user-13.jpg",
-    "/images/profilephoto/1732888881.jpg": "/images/profilephoto/1732888881.jpg",
-    "/images/profilephoto/1732888917.jpg": "/images/profilephoto/1732888917.jpg",
+    "/images/profilephoto/1732886513.png": "/images/profilephoto/1732886513.png",
+    "/images/profilephoto/1733122332.jpg": "/images/profilephoto/1733122332.jpg",
+    "/images/profilephoto/1733122743.jpg": "/images/profilephoto/1733122743.jpg",
+    "/images/profilephoto/1733122893.png": "/images/profilephoto/1733122893.png",
+    "/images/profilephoto/1733125946.jpg": "/images/profilephoto/1733125946.jpg",
+    "/images/profilephoto/1733131614.jpg": "/images/profilephoto/1733131614.jpg",
     "/images/raty/star-half-2.png": "/images/raty/star-half-2.png",
     "/images/raty/star-on-2.png": "/images/raty/star-on-2.png",
     "/images/slider/01.jpg": "/images/slider/01.jpg",
