change event registration form

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1299,6 +1299,7 @@
     "/images/misc/leaf-orange.png": "/images/misc/leaf-orange.png",
     "/images/misc/leaf-red.png": "/images/misc/leaf-red.png",
     "/images/misc/leaf-shadow.png": "/images/misc/leaf-shadow.png",
+    "/images/no_image_found.png": "/images/no_image_found.png",
     "/images/pages/arrow-down.png": "/images/pages/arrow-down.png",
     "/images/pages/auth-v1-bottom-bg.png": "/images/pages/auth-v1-bottom-bg.png",
     "/images/pages/auth-v1-top-bg.png": "/images/pages/auth-v1-top-bg.png",
@@ -1418,6 +1419,10 @@
     "/images/profilephoto/1733122893.png": "/images/profilephoto/1733122893.png",
     "/images/profilephoto/1733125946.jpg": "/images/profilephoto/1733125946.jpg",
     "/images/profilephoto/1733131614.jpg": "/images/profilephoto/1733131614.jpg",
+    "/images/profilephoto/1733143429.jpg": "/images/profilephoto/1733143429.jpg",
+    "/images/profilephoto/1733148978.jpg": "/images/profilephoto/1733148978.jpg",
+    "/images/profilephoto/1733203301.jpg": "/images/profilephoto/1733203301.jpg",
+    "/images/profilephoto/1733205181.jpg": "/images/profilephoto/1733205181.jpg",
     "/images/raty/star-half-2.png": "/images/raty/star-half-2.png",
     "/images/raty/star-on-2.png": "/images/raty/star-on-2.png",
     "/images/slider/01.jpg": "/images/slider/01.jpg",
